finalized numerical data

--- a/code/1_data_collection.ipynb
+++ b/code/1_data_collection.ipynb
@@ -41,22 +41,7 @@
     "\n",
     "I will create the best binary clasfication model to predict whether or not an Airbnb listing in DC will be considered popular or not compared to the current listing competition. In addition to the best predictive model, I will create a highly interpretive model to help hosts understand what features they could improve on their listing to increase popularity. These models will be deployed together an app that hosts can use to make their listings as strong as possible.\n",
     "\n",
-    "There are a few important metrics to point out for this project. The first is how to determine the binary classification of the listing being popular or not. I will use a combination of the number of ratings and the average rating to calculate popularity. Listings with over 49 reviews and over a 4.79 (out of 5) overall rating will be considered popular. I will also dig into any trends of the 0 rated or reviewed listings and see there are any commonalities between them and if they should be included in the model or not. The other metric to focus on and optimize will be measuring the accuracy of the model. I will focus on accuracy score specifically, as all types of classifications and misclassifications are equally important for this model. \n",
-    "\n",
-    "\n",
-    "\n",
-    "Other goals for project - \n",
-    "\n",
-    "2. cool city visuals\n",
-    "\n",
-    "3. Explore themes in text data - descriptions for neighborhoods, themes in reviews\n",
-    "\n",
-    "\n",
-    "questions- drop with no ratings? test both ways\n",
-    "\n",
-    "product- use logistic regression or glm for highly interpretable results as to what could help make host's place more popular\n",
-    "\n",
-    "also a best predictive model at whether or not place is popular"
+    "There are a few important metrics to point out for this project. The first is how to determine the binary classification of the listing being popular or not. I will use a combination of the number of ratings and the average rating to calculate popularity. Listings with over 60 reviews and over a 4.8 (out of 5) overall rating will be considered popular. I will also dig into any trends of the 0 rated or reviewed listings and see there are any commonalities between them and if they should be included in the model or not. The other metric to focus on and optimize will be measuring the accuracy of the model. I will focus on accuracy score specifically, as all types of classifications and misclassifications are equally important for this model. "
    ]
   },
   {
@@ -79,6 +64,16 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import json, requests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "498dc743",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.random.seed(100)"
    ]
   },
   {
