--- a/code/1_data_collection.ipynb
+++ b/code/1_data_collection.ipynb
@@ -41,7 +41,7 @@
     "\n",
     "I will create the best binary clasfication model to predict whether or not an Airbnb listing in DC will be considered popular or not compared to the current listing competition. In addition to the best predictive model, I will create a highly interpretive model to help hosts understand what features they could improve on their listing to increase popularity. These models will be deployed together an app that hosts can use to make their listings as strong as possible.\n",
     "\n",
-    "There are a few important metrics to point out for this project. The first is how to determine the binary classification of the listing being popular or not. I will use a combination of the number of ratings and the average rating to calculate popularity. Listings with over 60 reviews and over a 4.8 (out of 5) overall rating will be considered popular. I will also dig into any trends of the 0 rated or reviewed listings and see there are any commonalities between them and if they should be included in the model or not. The other metric to focus on and optimize will be measuring the accuracy of the model. I will focus on accuracy score specifically, as all types of classifications and misclassifications are equally important for this model. "
+    "There are a few important metrics to point out for this project. The first is how to determine the binary classification of the listing being popular or not. I will use a combination of the number of ratings and the average rating to calculate popularity. Listings with over 60 reviews and over a 4.8 (out of 5) overall rating will be considered popular. I want to explore the features that separate this group from the rest. Why are these lisitngs getting such high ratings and reviews? Second, the model I select should have as consistent accuracy scores as possible between training and testing groups and ideally the scores for both groups should be high to explain as much variance as possible. I will also focus on optimizing the precision score (true positives over all predicted positives), because in this specific case it would be worse to tell a host that their listing will be popular if it is actually not."
    ]
   },
   {
@@ -104,16 +104,6 @@
    "outputs": [],
    "source": [
     "listings = pd.read_csv('../data/listings.csv.gz')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "74538991",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "reviews = pd.read_csv('../data/reviews.csv.gz')"
    ]
   },
   {
@@ -839,116 +829,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "7bc93293",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>listing_id</th>\n",
-       "      <th>id</th>\n",
-       "      <th>date</th>\n",
-       "      <th>reviewer_id</th>\n",
-       "      <th>reviewer_name</th>\n",
-       "      <th>comments</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>3686</td>\n",
-       "      <td>131293</td>\n",
-       "      <td>2010-11-01</td>\n",
-       "      <td>257234</td>\n",
-       "      <td>Callie</td>\n",
-       "      <td>Staying with Levita and her wonderful family w...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>3686</td>\n",
-       "      <td>150766</td>\n",
-       "      <td>2010-12-08</td>\n",
-       "      <td>255888</td>\n",
-       "      <td>Patrick</td>\n",
-       "      <td>Vita is a very welcoming, helpful and friendly...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3686</td>\n",
-       "      <td>177749</td>\n",
-       "      <td>2011-02-02</td>\n",
-       "      <td>366688</td>\n",
-       "      <td>Benjamin</td>\n",
-       "      <td>This was my first time using \"airbnb\" and it m...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3686</td>\n",
-       "      <td>197451</td>\n",
-       "      <td>2011-03-12</td>\n",
-       "      <td>213492</td>\n",
-       "      <td>T.J.</td>\n",
-       "      <td>First, Vita saved my work week by providing me...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>3686</td>\n",
-       "      <td>213212</td>\n",
-       "      <td>2011-03-30</td>\n",
-       "      <td>428455</td>\n",
-       "      <td>Pete &amp; Leila</td>\n",
-       "      <td>Great host! Very welcoming and organised. I st...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   listing_id      id        date  reviewer_id reviewer_name  \\\n",
-       "0        3686  131293  2010-11-01       257234        Callie   \n",
-       "1        3686  150766  2010-12-08       255888       Patrick   \n",
-       "2        3686  177749  2011-02-02       366688      Benjamin   \n",
-       "3        3686  197451  2011-03-12       213492          T.J.   \n",
-       "4        3686  213212  2011-03-30       428455  Pete & Leila   \n",
-       "\n",
-       "                                            comments  \n",
-       "0  Staying with Levita and her wonderful family w...  \n",
-       "1  Vita is a very welcoming, helpful and friendly...  \n",
-       "2  This was my first time using \"airbnb\" and it m...  \n",
-       "3  First, Vita saved my work week by providing me...  \n",
-       "4  Great host! Very welcoming and organised. I st...  "
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "reviews.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 47,
    "id": "41850865",
    "metadata": {},
@@ -966,27 +846,6 @@
    ],
    "source": [
     "listings.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "id": "d1ed376b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(296276, 6)"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "reviews.shape"
    ]
   },
   {
@@ -1087,36 +946,6 @@
    ],
    "source": [
     "listings.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "id": "233fe5cc",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 296276 entries, 0 to 296275\n",
-      "Data columns (total 6 columns):\n",
-      " #   Column         Non-Null Count   Dtype \n",
-      "---  ------         --------------   ----- \n",
-      " 0   listing_id     296276 non-null  int64 \n",
-      " 1   id             296276 non-null  int64 \n",
-      " 2   date           296276 non-null  object\n",
-      " 3   reviewer_id    296276 non-null  int64 \n",
-      " 4   reviewer_name  296276 non-null  object\n",
-      " 5   comments       296086 non-null  object\n",
-      "dtypes: int64(3), object(3)\n",
-      "memory usage: 13.6+ MB\n"
-     ]
-    }
-   ],
-   "source": [
-    "reviews.info()"
    ]
   },
   {
