--- a/code/2_data_cleaning.ipynb
+++ b/code/2_data_cleaning.ipynb
@@ -2456,7 +2456,7 @@
    "id": "a5d74074",
    "metadata": {},
    "source": [
-    "Since the DC airbnbs are all pretty high quality, I will look into different percentiles to see which should be used as a threshhold to help indicate popularity. Aboce, we can see that the 50th percentile has a very high rating of 4.85 and there are 1,891 listings in this category. Also, the 70th percentile of ratings is 4.94 and 1,141 airbnbs are in this category. \n",
+    "Since the DC airbnbs are all pretty high quality, I will look into different percentiles to see which should be used as a threshhold to help indicate popularity. Above, we can see that the 50th percentile has a very high rating of 4.85 and there are 1,891 listings in this category. Also, the 70th percentile of ratings is 4.94 and 1,141 airbnbs are in this category. \n",
     "\n",
     "It's clear that to be considered the best in DC, the airbnb needs to meet high rating standards. When thinking of consumers, a 4.85 out of 5 overall rating would indicate high quality and attract guests to want to stay there. To be considered popular in DC, it seems an overall rating close to 4.85 (the 50th percentile) is reasonable, whereas the 4.9 rating may be too high. I will be using a rating hovering around 4.85 as part of the metric to calculate popularity."
    ]
