--- a/code/5_modeling.ipynb
+++ b/code/5_modeling.ipynb
@@ -301,7 +301,9 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "9c0de789",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -3704,7 +3706,9 @@
    "id": "78c23931",
    "metadata": {},
    "source": [
-    "The regular extra trees model with the default paramter combined with oversampling the minority class is the best model for our data. The model's accuracy score on testing data is 85%, showing that the model explains 84% of the variance of the data. Also, the precision score is 81% which is the highest we have seen in all the models. Theses scores improve upon the baseline and I am happy with this as the final model for production."
+    "The regular extra trees model with the default paramter combined with oversampling the minority class is the best model for our data. The model's accuracy score on testing data is 84%, showing that the model explains 84% of the variance of the data. Also, the precision score is 81% which is the highest we have seen in all the models. Theses scores improve upon the baseline and I am happy with this as the final model for production.\n",
+    "\n",
+    "When thinking about why the metrics were hovering in the low to mid 80s and I could not improve on the baseline more, it may be due to the data itself. The characteristics in listings that are not popular and popular may not have that distinct of differences in their features and so the models can only do so much with this situaion. This is an important finding for this project. "
    ]
   },
   {
