--- a/code/3_text_processing.ipynb
+++ b/code/3_text_processing.ipynb
@@ -188,7 +188,7 @@
    "id": "5b86b362",
    "metadata": {},
    "source": [
-    "A note about teh setiment scoring - negative, neutral and positive scores are straightforward. The compound score is the most useful metric if you want a single unidimensional measure of sentiment for a given sentence. Calling it a 'normalized, weighted composite score' is accurate."
+    "A note about the setiment scoring - negative, neutral and positive scores are straightforward. The compound score is the most useful metric if you want a single unidimensional measure of sentiment for a given sentence. Calling it a 'normalized, weighted composite score' is accurate. For now, I will pull all sentiment scores to include them in modeling first and see what comes from that. "
    ]
   },
   {
