--- a/code/7_production_models.ipynb
+++ b/code/7_production_models.ipynb
@@ -7535,7 +7535,7 @@
    "id": "70005a3c",
    "metadata": {},
    "source": [
-    "The coefficients above have been untransfored from their logged version but still in standard scaler units. Odds less than one here are our negative coefficients.\n",
+    "The coefficients above have been untransformed from their logged version but still in standard scaler units. Odds less than one here are our negative coefficients.\n",
     "\n",
     "Interpreting these coefficients for recommendations to hosts are as followed: \n",
     "\n",
