--- a/code/7_production_models.ipynb
+++ b/code/7_production_models.ipynb
@@ -1159,6 +1159,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "c0eb6c73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "neighborhood_chart = df.loc[:,'historic_site':'clothing_store']\n",
+    "\n",
+    "neighborhood_chart['neighborhood_cleansed'] = df['neighbourhood_cleansed']\n",
+    "\n",
+    "neighborhood_chart = neighborhood_chart.groupby(neighborhood_chart['neighborhood_cleansed']).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "058bc5c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('../models/neighborhood_chart.pkl', 'wb') as pickle_out:\n",
+    "    pickle_out = pickle.dump(neighborhood_chart, pickle_out)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "bef36983",
    "metadata": {},
